--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,14 +3,14 @@ name: Update README with Images
 on:
     push:
         branches:
-            - main
+            - master
     pull_request:
 
 jobs:
     update-readme:
         runs-on: ubuntu-latest
         steps:
-            - name: Repository klonen
+            - name: clone repo
               uses: actions/checkout@v3
 
             - name: adding screenshots
