--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -10,19 +10,19 @@ jobs:
     update-readme:
         runs-on: ubuntu-latest
         permissions:
-            contents: write
+            contents: write  # GitHub Actions darf ins Repo schreiben
         steps:
-            - name: clone repo
+            - name: Clone repo
               uses: actions/checkout@v3
 
-            - name: adding screenshots
+            - name: Adding screenshots to README
               run: |
                   echo "## Screenshots" > README.md
-                  for img in docs/images*; do
-                    echo "![]($img)" >> README.md
+                  for img in docs/images/*; do
+                    echo "<img src=\"$img\" width=\"450px\"/>" >> README.md
                   done
 
-            - name: commit changes
+            - name: Commit changes
               uses: stefanzweifel/git-auto-commit-action@v5
               with:
-                  commit_message: "auto update readme whit screenshots"
+                  commit_message: "auto update readme with screenshots"
