--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,13 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties (https://fabricmc.net/develop)
 minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.7
-loader_version=0.16.9
+yarn_mappings=1.21.4+build.8
+loader_version=0.16.12
 
 # Mod Properties
-mod_version=0.1.0
+mod_version=1.21.4-0.1.2
 maven_group=huhncode.Lucid
-archives_base_name=Lucid
+archives_base_name=Lucid_addon
 
-# Dependencies
+# Fabric API
+fabric_version=0.119.2+1.21.4
